<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_button"
        android:icon="@drawable/profile_ic"
        android:title="@string/profile"
        app:showAsAction="always"/>
</menu>