...
                android:background="@drawable/round_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/model_legend_textview">

                <EditText
                    android:id="@+id/model_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
...
                android:background="@drawable/round_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/make_legend_textview">

                <EditText
                    android:id="@+id/make_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_background">

                <EditText
                    android:id="@+id/estimated_value_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
                    android:textSize="18sp"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_background">

                <EditText
                    android:id="@+id/description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
                    android:textSize="18sp"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_background">

                <EditText
                    android:id="@+id/purchase_date_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
                    android:textSize="18sp"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_background">

                <EditText
                    android:id="@+id/serial_number_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
                    android:textSize="18sp"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_background">

                <EditText
                    android:id="@+id/comments_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
...
